<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.LauncherActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:animation="@anim/slide_up"
                    android:scaleType="centerCrop"
                    android:src="@drawable/intro_pic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/blur_background"/>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:src="@drawable/gradiant_bg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/blur_background" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="-70dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitoextrabold"
                    android:text="@string/discover_your"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView2"
                    android:fontFamily="@font/nunitobold"
                    android:text="@string/favourite_show"
                    android:textColor="@color/selectedMovie"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView3"
                    android:layout_marginTop="60dp"
                    android:fontFamily="@font/nunitosemibold"
                    android:text="@string/intro"
                    android:textColor="@color/movieDetailsSelected"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginBottom="40dp"
                    android:backgroundTint="@color/selectedMovie"
                    android:fontFamily="@font/nunitoblack"
                    android:paddingVertical="15dp"
                    android:text="@string/join_now"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>