<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".ui.activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="39dp"
                    android:layout_marginTop="150dp"
                    android:text="@string/hi"
                    android:textSize="60sp"
                    android:textColor="@color/selectedMovie"
                    android:fontFamily="@font/nunitoextrabold"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_view"
                    android:layout_alignStart="@+id/text_view"
                    android:text="Create new account to continue"
                    android:textColor="@color/white"
                    android:fontFamily="@font/nunitoreguler"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView5"
                    android:layout_alignStart="@id/textView5"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/nunitosemibold"
                    android:text="Full name"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/name_input"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@+id/tv_name"
                    android:layout_alignStart="@id/tv_name"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/log_in_input_bg"
                    android:paddingStart="10dp"
                    android:textColor="@color/white"
                    android:hint="Enter your name"
                    android:fontFamily="@font/nunitosemibold"
                    android:textColorHint="@color/movieDetailsSelected"
                    android:clickable="true"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_input"
                    android:layout_alignStart="@id/name_input"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/nunitosemibold"
                    android:text="Email address"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/email_input"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@+id/textView6"
                    android:layout_alignStart="@id/textView6"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/log_in_input_bg"
                    android:paddingStart="10dp"
                    android:textColor="@color/white"
                    android:hint="Enter your email"
                    android:fontFamily="@font/nunitosemibold"
                    android:textColorHint="@color/movieDetailsSelected"
                    android:clickable="true"
                    android:focusable="true"/>


                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email_input"
                    android:layout_alignStart="@id/email_input"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/nunitosemibold"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@+id/textView7"
                    android:layout_alignStart="@id/textView7"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/log_in_input_bg"
                    android:paddingStart="10dp"
                    android:hint="@string/enter_your_password"
                    android:inputType="numberPassword"
                    android:fontFamily="@font/nunitosemibold"
                    android:textColorHint="@color/movieDetailsSelected"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password_input"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="61dp"
                    android:text="Sign up"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:backgroundTint="@color/selectedMovie"
                    android:paddingVertical="15dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/nunitosemibold"
                    />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>